...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <EditText
      android:id="@+id/edit_query"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:layout_marginTop="16dp"
      android:layout_marginStart="12dp"
      android:hint="Search repositories.."
      app:layout_constraintEnd_toStartOf="@id/btn_search"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btn_search"
      android:layout_width="wrap_content"
...
